@@ -1,6 +1,7 @@
 2005-10-30  Pierre Chifflier  <pollux@wzdftpd.net>
 
 	* bugfix: cookie %spacefree not always working
+	* bugfix: str_append not setting allocated memory correctly
 
 2005-10-26  Pierre Chifflier  <pollux@wzdftpd.net>
 
